@@ -1,0 +1,63 @@
+/* XPM */
+static const char * vncmon_16x16_xpm[] = {
+"16 16 44 1",
+" 	c None",
+".	c #88888B",
+"+	c #808083",
+"@	c #FEFEFE",
+"#	c #FFFFFF",
+"$	c #163561",
+"%	c #737B88",
+"&	c #455D81",
+"*	c #25416A",
+"=	c #1B3C6B",
+"-	c #40597D",
+";	c #425A7E",
+">	c #445D80",
+",	c #204577",
+"'	c #375177",
+")	c #3A547A",
+"!	c #3D587F",
+"~	c #3B577E",
+"{	c #2B4770",
+"]	c #314F7A",
+"^	c #335482",
+"/	c #2D5283",
+"(	c #244A7E",
+"_	c #204476",
+":	c #FDFDFD",
+"<	c #818184",
+"[	c #275086",
+"}	c #2C5892",
+"|	c #8A8A8D",
+"1	c #BABDB6",
+"2	c #DBDDD9",
+"3	c #B9BBB5",
+"4	c #BFC1BB",
+"5	c #C8C9C4",
+"6	c #888A85",
+"7	c #898A8A",
+"8	c #DDDEDA",
+"9	c #D9DAD7",
+"0	c #CED0CB",
+"a	c #CED0CC",
+"b	c #BBBDB7",
+"c	c #C3C5BF",
+"d	c #BEC1BB",
+"e	c #BCBFB8",
+"    .++++++++++.",
+"    +@########@+",
+"    +#$$$$$$$$#+",
+".++++++++++%&$#+",
+"+@########@+*$#+",
+"+#$$$$$$$$#+=$#+",
+"+#$-;>&&&$#+,$#+",
+"+#$')!~{*$#+$$#+",
+"+#$]^/(_=$#+##:<",
+"+#$,[}}[,$#++++|",
+"+#$$$$$$$$#+123 ",
+"<:########:<4156",
+"|++++++++++76666",
+" 819101a123     ",
+"6bc1d1e14156    ",
+"666666666666    "};
